Default to claude-desktop context

--- a/serena-cli.yaml.example
+++ b/serena-cli.yaml.example
@@ -18,8 +18,8 @@ serena:
   # Project path (use "." for current directory)
   project_path: "."
 
-  # Context mode: claude-code, ide, desktop-app, etc.
-  context: "claude-code"
+  # Context mode: claude-desktop, ide, desktop-app, etc.
+  context: "claude-desktop"
 
   # Command to start Serena MCP (default: uvx)
   command: "uvx"
