--- a/serena-cli.yaml.example
+++ b/serena-cli.yaml.example
@@ -21,6 +21,9 @@ serena:
   # Context mode (optional; leave empty to let Serena decide)
   # context: ""
 
+  # Tool selection mode: auto (model decides) or heuristic (force tools for common intents)
+  tool_mode: "auto"
+
   # Command to start Serena MCP (default: uvx)
   command: "uvx"
 
