Add guard tool mode

--- a/serena-cli.yaml.example
+++ b/serena-cli.yaml.example
@@ -21,8 +21,8 @@ serena:
   # Context mode (optional; leave empty to let Serena decide)
   # context: ""
 
-  # Tool selection mode: auto (model decides) or heuristic (force tools for common intents)
-  tool_mode: "auto"
+  # Tool selection mode: auto (model decides), guard (auto + retry with forced tools), or heuristic (force tools)
+  tool_mode: "guard"
 
   # Command to start Serena MCP (default: uvx)
   command: "uvx"
